--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-data": "^2.4.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-infinity": "0.2.6",
     "ember-load-initializers": "^0.5.0",
     "ember-modal-dialog": "0.9.0",
     "ember-resolver": "^2.0.3",
