--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-load-initializers": "^0.5.0",
     "ember-modal-dialog": "0.9.0",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "emberfire": "2.0.1",
     "loader.js": "^4.0.0"
   }
